# python-kidra

./: .gitignore  .gitlab-ci.yml  README.org  build.sh  flake.nix  overrides.nix  pyproject.toml  requirements.txt  setup.py
.github/: README.org
scripts/: build_docker_using_docker.sh
src/python_ki_hydra/: main.py  text_statistics.py
src/python_kidra/: __main__.py  kidra.py  main.py  webservice.py
